--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,27 @@
     text-shadow: 1px 2px 20px black;
 }
 
-.vertical-divider{ sol
+.vertical-divider{
     text-align: center;
     height:30px;
     margin-left: 2%;
     border-left: 1px solid black;
     border-right: 1px solid black;
+}
+
+.horizontal-divider{
+	text-align: center;
+	width: 5%;
+	border-top: 3px solid red;
+	border-bottom: 3px solid red;
+}
+
+.headTopic{
+    font-family: "work sans", serif;
+    font-size: 250%;
+}
+
+body{
+	font-family: Roboto;
+	font-size: 150%;
 }
