Update css for the Skills page : on hover cdd change

--- a/assets/css/pie.css
+++ b/assets/css/pie.css
@@ -1,7 +1,11 @@
 #skill1, #skill2, #skill3, #skill4, #skill5, #skill6, #skill7{
     width: 15%;
     height: 15%;
+}
 
+#skill1> svg:hover, #skill2> svg:hover, #skill3> svg:hover, #skill4> svg:hover, #skill5> svg:hover, #skill6> svg:hover, #skill7 > svg:hover{
+  background-color: #bdbfbd;
+  border-radius: 100%;
 }
 
 #skill1 > svg {
